--- a/gce/create_4n6_disk_from_snapshot.ipynb
+++ b/gce/create_4n6_disk_from_snapshot.ipynb
@@ -97,10 +97,10 @@
    "outputs": [],
    "source": [
     "# create text boxes for user input\n",
-    "dst_project = widgets.Text(description = \"Destination Project: \", disabled=False)\n",
-    "dst_zone = widgets.Text(description = \"Destination Zone: \", disabled=False)\n",
-    "target_instance = widgets.Text(description = \"Target Instance: \", disabled=False)\n",
-    "src_project = widgets.Text(description = \"Source Project: \", disabled=False)\n",
+    "dst_project = widgets.Text(description = \"Destination Project: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
+    "dst_zone = widgets.Text(description = \"Destination Zone: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
+    "target_instance = widgets.Text(description = \"Target Instance: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
+    "src_project = widgets.Text(description = \"Source Project: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
     "\n",
     "display(dst_project, dst_zone, target_instance, src_project)"
    ]
@@ -154,11 +154,10 @@
    "outputs": [],
    "source": [
     "# create text boxes for user input\n",
-    "src_disk = widgets.Text(description = \"Source Disk: \", disabled=False)\n",
-    "src_zone = widgets.Text(description = \"Source Zone: \", disabled=False)\n",
-    "ss_name = widgets.Text(description = \"Snapshot Name: \", disabled=False)\n",
-    "dst_disk = widgets.Text(description = \"Destination Disk: \", disabled=False)\n",
-    "\n",
+    "src_disk = widgets.Text(description = \"Source Disk: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
+    "src_zone = widgets.Text(description = \"Source Zone: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
+    "ss_name = widgets.Text(description = \"Snapshot Name: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
+    "dst_disk = widgets.Text(description = \"Destination Disk: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
     "display(src_disk, src_zone, ss_name, dst_disk)"
    ]
   },
