--- a/gke/playbook/analysis/determine_pod_escape.ipynb
+++ b/gke/playbook/analysis/determine_pod_escape.ipynb
@@ -6,10 +6,10 @@
    "source": [
     "# Determine Pod Escape (ipynb)\n",
     "\n",
-    "References\n",
+    "**References**\n",
     "- [Bad Pods: Kubernetes Pod Privilege Escalation](https://bishopfox.com/blog/kubernetes-pod-privilege-escalation)\n",
     "- [Pod Security Context](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.24/#podsecuritycontext-v1-core)\n",
-    "- [Container Security Context](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.24/#securitycontext-v1-core)\n"
+    "- [Container Security Context](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.24/#securitycontext-v1-core)"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Install the dependencies `ipywidgets` and `pandas`. Skip the next cell if they had already been installed."
+    "Install the dependencies `ipywidgets`, `pandas` and `kubectl`. Skip the next cell if they had already been installed."
    ]
   },
   {
@@ -32,7 +32,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# install ipywidgets, pandas\n",
     "!pip3 install ipywidgets pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# install kubectl\n",
+    "!gcloud components install kubectl --quiet"
    ]
   },
   {
@@ -67,6 +78,16 @@
     "# extend width and max rows of pandas output\n",
     "pd.set_option('display.max_colwidth', None)\n",
     "pd.set_option('display.max_rows', None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [OPTIONAL] authenticate using your service account\n",
+    "!gcloud auth activate-service-account --key-file <json_key_file>"
    ]
   },
   {
@@ -108,8 +129,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If `Cluster Type` is `Regional`, specify the `Cluster Region`.  \n",
-    "Else, if `Cluster Type` is `Zonal`, specify the `Cluster Zone`."
+    "If `Cluster Type` is `Regional`, specify the `Cluster Region` (e.g. `asia-southeast1`).  \n",
+    "Else, if `Cluster Type` is `Zonal`, specify the `Cluster Zone` (e.g. `asia-southeast1-b`)."
    ]
   },
   {
@@ -121,10 +142,10 @@
    "source": [
     "# create text boxes for user input\n",
     "if cluster_type.value == 'Regional':\n",
-    "    cluster_region = widgets.Text(value='asia-southeast1', description = \"Cluster Region: \", disabled=False)\n",
+    "    cluster_region = widgets.Text(description = \"Cluster Region: \", disabled=False)\n",
     "    display(cluster_region)\n",
     "elif cluster_type.value == 'Zonal':\n",
-    "    cluster_zone = widgets.Text(value='asia-southeast1-b', description = \"Cluster Zone: \", disabled=False)\n",
+    "    cluster_zone = widgets.Text(description = \"Cluster Zone: \", disabled=False)\n",
     "    display(cluster_zone)"
    ]
   },
@@ -185,14 +206,14 @@
     "\n",
     "`serviceAccount`\n",
     "- Service account attached to cluster\n",
-    "- Default value is `default`, which is `<12-digit>-compute@developer.gserviceaccount.com`\n",
-    "- Worthwhile to check the IAM roles/permissions granted to this service account\n",
+    "- Default value is `default`, which is the `<12-digit>-compute@developer.gserviceaccount.com`\n",
+    "- If not `default`, worthwhile to check the IAM roles/permissions granted to this service account\n",
     "\n",
     "`oauthScopes`\n",
     "- Scope of service account attached to cluster\n",
     "- Ensure that it **IS NOT** https://www.googleapis.com/auth/cloud-platform, which enables the authentication to any API function and leverage the full powers of IAM permissions assigned to the service account\n",
     "- Default is `devstorage.read_only`, `logging.write`, `monitoring`, `servicecontrol`, `service.management.readonly`, `trace.append`, which prevent the leveraging of full powers of IAM permissions assigned to the service account\n",
-    "- If **NOT** either of above, scope is user-customised\n",
+    "- If **NOT** the above, scope is user-customised\n",
     "- Scope **DOES NOT** matter if the access token of the service account is obtained from the metadata service and used outside of the cluster"
    ]
   },
@@ -265,12 +286,15 @@
    "id": "034b7fe8",
    "metadata": {},
    "source": [
+    "Due to the potential overwhelming output that the `kubectl` command could return, the output had been parsed to return only values that are not `NA`. Check against the following documentation to determine if these values are of concern.\n",
+    "\n",
     "`runAsNonRoot` - Indicates that the container must run as a **non-root** user\n",
     "\n",
     "`runAsGroup`\n",
     "- GID to run the entrypoint of the container process\n",
     "- Uses runtime default if unset\n",
     "- Often set up in conjunction with volume mounts containing files that have the same ownership IDs\n",
+    "- In GKE, it is normal for `event-exporter-gke`, `konnectivity-agent` and `konnectivity-agent-autoscaler` to have `runAsGroup` value of `1000`\n",
     "\n",
     "`runAsUser`\n",
     "- UID to run the entrypoint of the container process\n",
@@ -278,13 +302,14 @@
     "- Enables the viewing of environment variables or file descriptors of processes with the specified UID\n",
     "- Often set up in conjunction with volume mounts containing files that have the same ownership IDs\n",
     "- Check `/etc/passwd` of host/node to map uid to username\n",
+    "- In GKE, it is normal for `event-exporter-gke`, `konnectivity-agent` and `konnectivity-agent-autoscaler` to have `runAsUser` value of `1000`\n",
     "\n",
     "`seLinuxOptions`\n",
     "- SELinux is a policy driven system to control access to apps, processes and files on a Linux system\n",
     "- Implements the Linux Security Modules framework in the Linux kernel\n",
     "- Based on the concept of labels - it applies these labels to all the elements in the system which group elements together\n",
-    "- Labels are also known as the security context (not to be confused with the Kubernetes securityContext)\n",
-    "- Labels consist of a user, role, type, and an optional field level in the format user:role:type:level\n",
+    "- Labels are also known as the security context (not to be confused with the Kubernetes `securityContext`)\n",
+    "- Labels consist of a user, role, type, and an optional field level in the format `user:role:type:level`\n",
     "- SELinux then uses policies to define which processes of a particular context can access other labelled objects in the system\n",
     "- SELinux can be strictly enforced, in which case access will be denied, or it can be configured in permissive mode where it will log access\n",
     "- In containers, SELinux typically labels the container process and the container image in such a way as to restrict the process to only access files within the image\n",
@@ -352,11 +377,13 @@
    "id": "90b47ab7",
    "metadata": {},
    "source": [
+    "Due to the overwhelming output that the `kubectl` command could return, the output had been parsed to return only values that are not `NA`. Amongst the displayed output are pods in `kube-system` namespace which come with the GKE cluster by default and they can be ignored. For others, check against the following to determine if the values are of concern. \n",
+    "\n",
     "`privileged`\n",
     "- Runs container in privileged mode\n",
     "- Processes in privileged containers are essentially equivalent to root on the node/host\n",
-    "- Provides acceess to `/dev` on the host, which enables the mounting of the node/host filesytem to the privileged pod\n",
-    "    - But provides a limited view of the filesystem - files that require privilege escaltion (e.g. to root) are not accessible\n",
+    "- Provides access to `/dev` on the host, which enables the mounting of the node/host filesytem to the privileged pod\n",
+    "    - But provides a limited view of the filesystem - files that require privilege escalation (e.g. to root) are not accessible\n",
     "- Enables multiple options to gaining RCE with root privileges on the node/host\n",
     "\n",
     "`allowPrivilegeEscalation`\n",
@@ -377,8 +404,8 @@
     "    - `Unmasked`, which removes all masking for the /proc filesystem.\n",
     "\n",
     "`readOnlyRootFilesystem`\n",
-    "- Default is `false`\n",
-    "- If enabled, limits the actions that an attacker can perform on the container filesystem\n",
+    "- Default is `false` (represented by `nan` in the output)\n",
+    "- If `true`, limits the actions that an attacker can perform on the container filesystem\n",
     "\n",
     "`windowsOptions`\n",
     "- Windows specific settings applied to all containers"
@@ -399,7 +426,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!kubectl get pods -A --field-selector=metadata.namespace!=kube-system -o custom-columns=Name:.metadata.name,Namespace:.metadata.namespace,HostPID:.spec.hostPID,HostIPC:.spec.hostIPC,HostNetwork:.spec.hostNetwork"
+    "!kubectl get pods -A --field-selector=metadata.namespace!=kube-system \\\n",
+    "    -o custom-columns=Name:.metadata.name,Namespace:.metadata.namespace,HostPID:.spec.hostPID,HostIPC:.spec.hostIPC,HostNetwork:.spec.hostNetwork"
    ]
   },
   {
@@ -408,8 +436,8 @@
    "metadata": {},
    "source": [
     "`hostPID`\n",
-    "* **Unable** to get privileged code execution on the host directly\n",
-    "* Possible options for attacker\n",
+    "* **Unable** to get privileged code execution on the host directly with only `hostPID: true`\n",
+    "* If `true`, possible options for attacker\n",
     "    * View processes on host, including processes running in each pod\n",
     "    * View environment variables for each pod on the host (which may contain credentials)\n",
     "        * Applies only to processes running within pods that share the same UID as the `hostPID` pod\n",
@@ -419,18 +447,17 @@
     "    * Kill process on the node\n",
     "\n",
     "`hostIPC`\n",
-    "* **Unable** to get privileged code execution on the host directly\n",
-    "* Able to access data used by any pods that also use the host’s IPC namespace\n",
+    "* **Unable** to get privileged code execution on the host directly with only `hostIPC: true`\n",
     "* If any process on the host or any processes in a pod uses the host’s inter-process communication mechanisms (shared memory, semaphore arrays, message queues, etc), these mechanisms can be read or written to\n",
-    "* Possible options for attacker\n",
-    "    * Inspect `/dev/shm`\n",
-    "        * Shared between any pod with `hostIPC: true` and the host\n",
-    "        * Look for any files\n",
-    "    * Inspect existing IPC facilities - Check to see if any IPC facilities are being used with `/usr/bin/ipcs` - `ipcs -a`\n",
+    "* If `true`, possible options for attacker\n",
+    "    * Access data used by any pods that also use the host’s IPC namespace by inspecting `/dev/shm`\n",
+    "        * `/dev/shm` is shared between any pod with `hostIPC: true` and the host\n",
+    "        * Look for any files in this shared memory location\n",
+    "    * Inspect existing IPC facilities - Check to see if any IPC facilities are being used with `/usr/bin/ipcs -a`\n",
     "\n",
     "`hostNetwork`\n",
-    "* **Unable** to get privileged code execution on the host directly\n",
-    "* Possible options for attacker\n",
+    "* **Unable** to get privileged code execution on the host directly with only `hostNetwork: true`\n",
+    "* If `true`, possible options for attacker\n",
     "    * Sniff traffic - Use tcpdump to sniff unencrypted traffic on any interface on the host\n",
     "    * Access services bound to localhost - Can reach services that only listen on the host’s loopback interface or that are otherwise blocked by network policies\n",
     "    * Bypass network policy - Pod would be bound to the host’s network interfaces and not the pods/namspaces’"
@@ -451,7 +478,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!kubectl get pods -A --field-selector=metadata.namespace!=kube-system -o custom-columns=Name:.metadata.name,Namespace:.metadata.namespace,HostPath:.spec.volumes[].hostPath"
+    "!kubectl get pods -A --field-selector=metadata.namespace!=kube-system \\\n",
+    "    -o custom-columns=Name:.metadata.name,Namespace:.metadata.namespace,HostPath:.spec.volumes[].hostPath"
    ]
   },
   {
@@ -459,11 +487,12 @@
    "id": "fdcf13c6",
    "metadata": {},
    "source": [
+    "* No results returned if there are no pods with `hostpath` configured\n",
     "* If the administrator had not limited what can be mounted, the entire host’s filesystem can be mounted\n",
     "* Provides read/write access on the host’s filesystem (limited to what the administrator defined)\n",
-    "* Possible options for attacker\n",
+    "* If configured, possible options for attacker\n",
     "    * Look for kubeconfig files on the host filesystem (may find a cluster-admin config with full access to everything)\n",
-    "        * GKE by default **DOES NOT** store kubeconfig files (i.e. `.kube/config`) on the node hosting the pod\n",
+    "        * **Not applicable** to GKE as GKE by default **DOES NOT** store kubeconfig files (i.e. `.kube/config`) on the node hosting the pod\n",
     "    * Add persistence \n",
     "        * Add own SSH key\n",
     "        * Add own CRON job\n",
