--- a/gke/playbook/discover_cluster.ipynb
+++ b/gke/playbook/discover_cluster.ipynb
@@ -73,6 +73,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [OPTIONAL] authenticate using your service account\n",
+    "!gcloud auth activate-service-account --key-file <json_key_file>"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "32702146",
    "metadata": {},
