--- a/log_explorer/log_review.ipynb
+++ b/log_explorer/log_review.ipynb
@@ -68,6 +68,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [OPTIONAL] authenticate using your service account\n",
+    "!gcloud auth activate-service-account --key-file <json_key_file>"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -120,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set environment variables\n",
+    "# set environment variables and construct query\n",
     "os.environ['SRC_PROJECT'] = src_project.value\n",
     "os.environ['QUERY'] = 'resource.type=' + resource_type.value + ' AND timestamp>=\"' + str(start_date.value) + 'T' + start_time.value + ':00Z\"' + ' AND timestamp<=\"' + str(end_date.value) + 'T' + end_time.value + ':00Z\"'"
    ]
