--- a/vpc/packet_capture.ipynb
+++ b/vpc/packet_capture.ipynb
@@ -71,6 +71,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [OPTIONAL] authenticate using your service account\n",
+    "!gcloud auth activate-service-account --key-file <json_key_file>"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1be2eedf",
    "metadata": {},
@@ -94,7 +104,7 @@
    "outputs": [],
    "source": [
     "# create text boxes for user input\n",
-    "src_project = widgets.Text(description = \"Source Project: \", disabled=False)\n",
+    "src_project = widgets.Text(description = \"Source Project: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
     "display(src_project)"
    ]
   },
@@ -136,9 +146,8 @@
     "| Fields      | Description |\n",
     "| ----------- | ----------- |\n",
     "| **Source (Target)**    |   |\n",
-    "| `Source Region`   | Region of the compute instance to capture packets from    |\n",
-    "| `Source Zone`   | Zone of the compute instance to capture packets from    |\n",
-    "| `Source Project`   | Project id of project that contains the compute instance to capture packets from    |\n",
+    "| `Source Region`   | Region of the compute instance to capture packets from (e.g. `asia-southeast1`)   |\n",
+    "| `Source Zone`   | Zone of the compute instance to capture packets from (e.g. `asia-southeast1-b`)   |\n",
     "| `Source Network`   | Name of network that contains the compute instance to capture packets from    |\n",
     "| `Source IP Range`   | IP address range of network that contains the compute instance to capture packets from    |\n",
     "| `Source VM`   | Name of compute instance to capture packets from    |\n",
@@ -153,8 +162,9 @@
     "| **Network**    |   |\n",
     "| `Mirror Network Tag`   | Name of tag to place on the compute instance to capture packets from    |\n",
     "| `VPC Peering Name`   | Name of VPC network peering connection between the target network and the analyst network   |\n",
-    "| `LB Health Check Name`   | Name of health check (for load balancer to receive mirrored traffic)    |\n",
-    "| `LB Frontend Name`   | Name of front end (for load balancer to receive mirrored traffic)    |\n",
+    "| `LB Health Check Name`   | Name of health check (for load balancer which receives mirrored traffic)    |\n",
+    "| `LB Backend Name`   | Name of backend (for load balancer which receives mirrored traffic)    |\n",
+    "| `LB Frontend Name`   | Name of frontend (for load balancer which receives mirrored traffic)    |\n",
     "| `Packet Mirroring Policy Name`   | Name of packet mirroring policy    |"
    ]
   },
@@ -167,30 +177,30 @@
    "source": [
     "# create text boxes for user input\n",
     "print(\"====== SOURCE (TARGET)======\")\n",
-    "src_region = widgets.Text(value='asia-southeast1', description = \"Source Region: \", disabled=False)\n",
-    "src_zone = widgets.Text(value='asia-southeast1-b', description = \"Source Zone: \", disabled=False)\n",
-    "src_network = widgets.Text(value='default', description = \"Source Network: \", disabled=False)\n",
-    "src_ip_range = widgets.Text(value='10.148.0.0/20', description = \"Source IP Range: \", disabled=False)\n",
-    "src_vm = widgets.Text(description = \"Source VM: \", disabled=False)\n",
+    "src_region = widgets.Text(description = \"Source Region: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
+    "src_zone = widgets.Text(description = \"Source Zone: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
+    "src_network = widgets.Text(value='default', description = \"Source Network: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
+    "src_ip_range = widgets.Text(description = \"Source IP Range: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
+    "src_vm = widgets.Text(description = \"Source VM: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
     "display(src_region, src_zone, src_network, src_ip_range, src_vm)\n",
     "\n",
     "print(\"====== DESTINATION (ANALYST)======\")\n",
-    "dst_project = widgets.Text(description = \"Destination Project: \", disabled=False)\n",
-    "dst_network = widgets.Text(value='pc-network', description = \"Destination Network: \", disabled=False)\n",
-    "dst_subnet = widgets.Text(value='pc-subnet', description = \"Destination Subnet: \", disabled=False)\n",
-    "dst_subnet_range = widgets.Text(value='10.1.2.0/24', description = \"Destination Subnet Range: \", disabled=False)\n",
-    "dst_instance_grp = widgets.Text(value='pc-grp', description = \"Destination Instance Grp: \", disabled=False)\n",
-    "dst_vm = widgets.Text(value='pc-vm-1', description = \"Destination VM: \", disabled=False)\n",
-    "dst_ssh_ip = widgets.Text(value='165.225.112.0/23', description = \"Destination SSH IP: \", disabled=False)\n",
-    "display(dst_project, dst_network, dst_subnet, dst_subnet_range, dst_instance_grp, dst_vm, dst_ssh_ip)\n",
+    "dst_project = widgets.Text(description = \"Destination Project: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
+    "dst_network = widgets.Text(value='pc-network', description = \"Destination Network: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
+    "dst_subnet = widgets.Text(value='pc-subnet', description = \"Destination Subnet: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
+    "dst_subnet_range = widgets.Text(value='10.1.2.0/24', description = \"Destination Subnet Range: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
+    "dst_instance_grp = widgets.Text(value='pc-grp', description = \"Destination Instance Grp: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
+    "dst_vm = widgets.Text(value='pc-vm-1', description = \"Destination VM: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
+    "dst_ssh_ip = widgets.Text(description = \"Destination SSH IP: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
+    "display(dst_project, dst_network, dst_subnet, dst_subnet_range, dst_instance_grp, dst_vm, dst_ssh_ip, layout=widgets.Layout(width='40%'))\n",
     "\n",
     "print(\"====== NETWORK ======\")\n",
-    "mirror_network_tag = widgets.Text(value='pc-tag', description = \"Mirror Network Tag: \", disabled=False)\n",
-    "peering_name = widgets.Text(value='pc-peering', description = \"VPC Peering Name: \", disabled=False)\n",
-    "lb_hc_name = widgets.Text(value='pc-hc-ilb', description = \"LB Health Check Name: \", disabled=False)\n",
-    "lb_be_name = widgets.Text(value='pc-be-ilb', description = \"LB Backend Name: \", disabled=False)\n",
-    "lb_fe_name = widgets.Text(value='pc-fe-ilb', description = \"LB Frontend Name: \", disabled=False)\n",
-    "pm_policy_name = widgets.Text(value='pc-pmp', description = \"Packet Mirroring Policy Name: \", disabled=False)\n",
+    "mirror_network_tag = widgets.Text(value='pc-tag', description = \"Mirror Network Tag: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
+    "peering_name = widgets.Text(value='pc-peering', description = \"VPC Peering Name: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
+    "lb_hc_name = widgets.Text(value='pc-hc-ilb', description = \"LB Health Check Name: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
+    "lb_be_name = widgets.Text(value='pc-be-ilb', description = \"LB Backend Name: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
+    "lb_fe_name = widgets.Text(value='pc-fe-ilb', description = \"LB Frontend Name: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
+    "pm_policy_name = widgets.Text(value='pc-pmp', description = \"Packet Mirroring Policy Name: \", disabled=False, layout=widgets.Layout(width='40%'))\n",
     "display(mirror_network_tag, peering_name, lb_hc_name, lb_be_name, lb_fe_name, pm_policy_name)"
    ]
   },
