Update GKE IR Sections

--- a/gke/playbook/discover_cluster.ipynb
+++ b/gke/playbook/discover_cluster.ipynb
@@ -376,6 +376,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# list pods with containers\n",
+    "# column CONTAINERS shows comma separated container names in a pod\n",
+    "!kubectl get pods -o --all-namespaces 'custom-columns=NAMESPACE:.metadata.namespace,POD:.metadata.name,CONTAINERS:.spec.containers[*].name'\n",
+    "# sample output\n",
+    "# NAMESPACE    POD                           CONTAINERS\n",
+    "# default      wordpress-1-deployer-d1w8s    deployer\n",
+    "# default      wordpress-1-mysql-0           mysql,mysqld-exporter\n",
+    "# default      wordpress-1-wordpress-0       wordpress,apache-exporter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "405de6bb",
    "metadata": {},
    "outputs": [],
@@ -433,6 +449,76 @@
    "source": [
     "- Take special note of `Namespace`, `Node`, `Start Time`, `Labels`, `Containers`, `Image Volumes`\n",
     "- `Image` could reveal the exact containerized application, where it was downloaded from and its default configuration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## List & Describe Services"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# list services\n",
+    "!kubectl get services --all-namespaces\n",
+    "# sample output\n",
+    "# NAME                              TYPE           CLUSTER-IP     EXTERNAL-IP     PORT(S)        AGE\n",
+    "# kubernetes                        ClusterIP      10.64.16.1     <none>          443/TCP        7d19h\n",
+    "# wordpress-1-apache-exporter-svc   ClusterIP      None           <none>          9117/TCP       7d19h\n",
+    "# wordpress-1-mysql-svc             ClusterIP      None           <none>          3306/TCP       7d19h\n",
+    "# wordpress-1-mysqld-exporter-svc   ClusterIP      None           <none>          9104/TCP       7d19h\n",
+    "# wordpress-1-wordpress-svc         LoadBalancer   10.64.29.229   34.129.29.205   80:32221/TCP   7d19h"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- To surface services exposed to Internet, look for TYPE `LoadBalancer` and `External-IP` is a public IP address"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl describe service <service_name> --namespace <namespace>\n",
+    "# abstract of sample output\n",
+    "# Name: wordpress-1-wordpress-svc\n",
+    "# Namespace: default\n",
+    "# Labels: app.kubernetes.io/component=wordpress-webserver\n",
+    "#  app.kubernetes.io/name=wordpress-1\n",
+    "# Annotations: cloud.google.com/neg: {\"ingress\":true}\n",
+    "# Selector: app.kubernetes.io/component=wordpress-webserver,app.kubernetes.io/name=wordpress-1\n",
+    "# Type: LoadBalancer\n",
+    "# IP Family Policy: SingleStack\n",
+    "# IP Families: IPv4\n",
+    "# IP: 10.64.29.229\n",
+    "# IPs: 10.64.29.229\n",
+    "# LoadBalancer Ingress: 34.129.29.205\n",
+    "# Port: <unset> 80/TCP\n",
+    "# TargetPort: 80/TCP\n",
+    "# NodePort: <unset> 32221/TCP\n",
+    "# Endpoints: 10.56.0.6:80\n",
+    "# Session Affinity: None\n",
+    "# External Traffic Policy: Cluster\n",
+    "# Events: <none>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on above sample output\n",
+    "- `Labels: app.kubernetes.io/name=wordpress-1` - Kubernetes application name\n",
+    "- `IPs: 10.64.29.229` - IP addresses of the containers associated with the service\n",
+    "- `Endpoints: 10.56.0.6:80` - IP address and port of the pods associated with the service"
    ]
   }
  ],
