Fix missing comment in discover_cluster.ipynb

--- a/gke/playbook/discover_cluster.ipynb
+++ b/gke/playbook/discover_cluster.ipynb
@@ -488,6 +488,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# describe specific service\n",
     "!kubectl describe service <service_name> --namespace <namespace>\n",
     "# abstract of sample output\n",
     "# Name: wordpress-1-wordpress-svc\n",
